--- a/index.html
+++ b/index.html
@@ -387,11 +387,11 @@ Alem de massas, criamos molhos com ingredientes organicos selecionados e, fresco
                                     <div class="offer-item">
                                         <img src="images/azeite.jpg" alt="" class="img-responsive">
                                         <div>
-                                            <h3>Azeite defumado com ervas</h3>
+                                            <h3>Azeite defumado com ervas - 50 ml</h3>
                                             <p>
                                             </p>
                                         </div>
-                                        <span class="offer-price">$12.5</span>
+                                        <span class="offer-price">R$10</span>
                                     </div>
                                 </div>
 
