--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                     <li class="active"><a href="#banner">Home</a></li>
                                     <li><a href="#about">Cozinha Funcional</a></li>
                                     <li><a href="#menu">Produtos</a></li>
-                                    <li><a href="#our_team">Chefs</a></li>
+                                    <li><a href="#our_team">Chef</a></li>
                                     <!-- <li><a href="#gallery">Galeria</a></li> -->
                                     <!-- <li><a href="#blog">Blog</a></li> -->
                                     <!-- <li><a href="#pricing">pricing</a></li> -->
@@ -126,12 +126,10 @@
                     <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                         <h2 class="block-title"> Cozinha Funcional </h2>
                         <h3>A cozinha funcional...</h3>
-                        <p>A fitnellis tem a especialidade de criar pratos deliciosos funcionais,  agregando mais sabor a sua refeicao.
-Alem de massas, criamos molhos com ingredientes organicos selecionados e, frescos. </p>
+                        <p>A Fitnelli's tem a especialidade em criar deliciosos pratos funcionais,  agregando mais sabor à sua refeição.
+Além de massas, criamos molhos com ingredientes orgânicos selecionados e frescos. </p>
                         <p> Cozinha funcional é a cozinha cujos pratos entregam alto valor nutricional, são ricos em vitaminas, antioxidantes e fibras e muito saudáveis. </p>
-
                         <p> No entanto, comida saudável não é sinônimo de comida sem graça. A Fitnelli's tem a especialidade de criar pratos deliciosos funcionais.</p>
-
                         <p> Além de massas, criamos molhos com ingredientes orgânicos selecionados. </p>
                     </div>
                 </div>
@@ -431,9 +429,9 @@ Alem de massas, criamos molhos com ingredientes organicos selecionados e, fresco
                                         <h3>Glória Petinelli</h3>
                                         <p>Chef formada em Gastronomia, especialista em cozinha funcional.</p>
                                         <ul class="team-social">
-                                            <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+                                            <li><a href="https://www.facebook.com/glo_petinelli"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                                            <li><a href="https://www.instagram.com/glo_petinelli/"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                                            <li><a href="https://www.linkedin.com/in/gl%C3%B3ria-petinelli-1aa14181/"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -1021,28 +1019,8 @@ Alem de massas, criamos molhos com ingredientes organicos selecionados e, fresco
                                 <p>Aenean commodo ligula eget dolor aenean massa. Cum sociis nat penatibu set magnis dis parturient montes.</p> -->
                                 <ul class="socials-box footer-socials pull-left">
                                     <li>
-                                        <a href="#">
-                                            <div class="social-circle-border"><i class="fa  fa-facebook"></i></div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="social-circle-border"><i class="fa fa-twitter"></i></div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="social-circle-border"><i class="fa fa-google-plus"></i></div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="social-circle-border"><i class="fa fa-pinterest"></i></div>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <div class="social-circle-border"><i class="fa fa-linkedin"></i></div>
+                                        <a href="https://www.instagram.com/fitnellisgourmet/">
+                                            <div class="social-circle-border"><i class="fa  fa-instagram"></i></div>
                                         </a>
                                     </li>
                                 </ul>
