--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                     <li><a href="#about">Cozinha Funcional</a></li>
                                     <li><a href="#menu">Produtos</a></li>
                                     <li><a href="#our_team">Chef</a></li>
-                                    <!-- <li><a href="#gallery">Galeria</a></li> -->
+                                    <li><a href="#gallery">Instagram</a></li>
                                     <!-- <li><a href="#blog">Blog</a></li> -->
                                     <!-- <li><a href="#pricing">pricing</a></li> -->
                                     <!-- <li><a href="#reservation">Reservaion</a></li> -->
@@ -472,15 +472,15 @@ Além de massas, criamos molhos com ingredientes orgânicos selecionados e fresc
 
     <div id="gallery" class="gallery-main pad-top-100 pad-bottom-100">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <!-- <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"> -->
                     <!-- <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
                         <h2 class="block-title text-center">
 						Galeria
 					</h2>
                         <p class="title-caption text-center">There are many variations of passages of Lorem Ipsum available </p>
                     </div> -->
-                    <div class="gal-container clearfix">
+                    <!-- <div class="gal-container clearfix">
                         <div class="col-md-8 col-sm-12 co-xs-12 gal-item">
                             <div class="box">
                                 <a href="#" data-toggle="modal" data-target="#1">
@@ -681,10 +681,22 @@ Além de massas, criamos molhos com ingredientes orgânicos selecionados e fresc
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- end gal-container -->
-                </div>
+                <!-- </div> -->
                 <!-- end col -->
+            <!-- </div> -->
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                  <a target="_blank" href="https://www.instagram.com/fitnellisgourmet/">
+                  <h2 class="block-title text-center">
+                    Instagram
+                  <i class="fa fa-instagram" style="color:#8dc63f;"></i>
+
+    </h2>
+    </a>
+                  <div id="instagram-feed"></div>
+                </div>
             </div>
             <!-- end row -->
         </div>
@@ -1119,6 +1131,25 @@ Além de massas, criamos molhos com ingredientes orgânicos selecionados e fresc
     <script src="js/bootstrap.min.js"></script>
     <!-- ALL PLUGINS -->
     <script src="js/custom.js"></script>
+    <script src="https://rawcdn.githack.com/jsanahuja/InstagramFeed/514c379c599a1a1fed79d6b21f063c26bdbfb016/dist/InstagramFeed.min.js"></script>
+    <script>
+    (function(){
+        new InstagramFeed({
+            'username': 'fitnellisgourmet',
+            'container': document.getElementById("instagram-feed"),
+            'display_profile': false,
+            'display_biography': false,
+            'display_gallery': true,
+            'callback': null,
+            'styling': true,
+            'items': 24,
+            'items_per_row': 3,
+            'margin': 1,
+            'lazy_load': true,
+            'on_error': console.error
+        });
+    })();
+</script>
 </body>
 
 </html>
