--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Além de massas, criamos molhos com ingredientes orgânicos selecionados e fresc
     </div>
     <!-- end special-menu -->
 
-    <div id="menu" class="menu-main pad-top-100 pad-bottom-100">
+    <div id="menu" class="menu-main pad-top-100 pad-bottom-100" itemscope itemtype="http://schema.org/MenuSection">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -225,64 +225,64 @@ Além de massas, criamos molhos com ingredientes orgânicos selecionados e fresc
                     <div class="tab-menu">
                         <div class="slider slider-nav">
                             <div class="tab-title-menu">
-                                <h2>MASSAS</h2>
+                                <h2 itemprop="name">MASSAS</h2>
                                 <p> <i class="flaticon-dinner"></i> </p>
                             </div>
                             <div class="tab-title-menu">
-                                <h2>LASANHAS</h2>
+                                <h2 itemprop="name">LASANHAS</h2>
                                 <p> <i class="flaticon-desert"></i> </p>
                             </div>
                             <div class="tab-title-menu">
-                                <h2>MOLHOS</h2>
+                                <h2 itemprop="name">MOLHOS</h2>
                                 <p> <i class="flaticon-canape"></i> </p>
                             </div>
                             <div class="tab-title-menu">
-                                <h2>COMPOTAS</h2>
+                                <h2 itemprop="name">COMPOTAS</h2>
                                 <p> <i class="flaticon-coffee"></i> </p>
                             </div>
                         </div>
                         <div class="slider slider-single">
                             <div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
-                                  <div class="offer-item">
+                                  <div class="offer-item"  itemscope itemtype="http://schema.org/MenuItem">
                                       <img src="images/tagliatelli_chia.jpg" alt="" class="img-responsive">
-                                      <div>
-                                          <h3>Tagliatelli chia</h3>
+                                      <div itemscope itemtype="http://schema.org/offers">
+                                          <h3 itemprop="name">Tagliatelli chia</h3>
                                           <p>
                                           </p>
                                       </div>
-                                      <span class="offer-price">R$15</span>
+                                      <span class="offer-price" itemprop="price">R$15</span>
                                   </div>
-                                    <div class="offer-item">
+                                    <div class="offer-item" itemscope itemtype="http://schema.org/MenuItem">
                                         <img src="images/tagliatelli_aveia.jpg" alt="" class="img-responsive">
-                                        <div>
-                                            <h3>Tagliatelli aveia</h3>
+                                        <div itemscope itemtype="http://schema.org/offers">
+                                            <h3 itemprop="name">Tagliatelli aveia</h3>
                                             <p>
                                             </p>
                                         </div>
-                                        <span class="offer-price">R$15</span>
+                                        <span class="offer-price" itemprop="price">R$15</span>
                                     </div>
-                                    <div class="offer-item">
+                                    <div class="offer-item"  itemscope itemtype="http://schema.org/MenuItem">
                                         <img src="images/tagliatelli_cenoura.jpg" alt="" class="img-responsive">
-                                        <div>
-                                            <h3>Tagliatelli cenoura</h3>
+                                        <div itemscope itemtype="http://schema.org/offers">
+                                            <h3 itemprop="name">Tagliatelli cenoura</h3>
                                             <p>
                                             </p>
                                         </div>
-                                        <span class="offer-price">R$15</span>
+                                        <span class="offer-price" itemprop="price">R$15</span>
                                     </div>
                                 </div>
                                 <!-- end col -->
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
-                                    <div class="offer-item">
+                                    <div class="offer-item" itemscope itemtype="http://schema.org/MenuItem">
                                         <img src="images/tagliatelli_beterraba.jpg" alt="" class="img-responsive">
-                                        <div>
-                                            <h3>Tagliatelli beterraba</h3>
+                                        <div itemscope itemtype="http://schema.org/offers">
+                                            <h3 itemprop="name">Tagliatelli beterraba</h3>
                                             <p>
 
                                             </p>
                                         </div>
-                                        <span class="offer-price">R$15</span>
+                                        <span class="offer-price" itemprop="price">R$15</span>
                                     </div>
                                 </div>
                                 <!-- end col -->
@@ -293,62 +293,62 @@ Além de massas, criamos molhos com ingredientes orgânicos selecionados e fresc
 
                                 </div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
-                                    <div class="offer-item">
+                                    <div class="offer-item" itemscope itemtype="http://schema.org/MenuItem">
                                         <img src="images/tagliatelli_integral.jpg" alt="" class="img-responsive">
-                                        <div>
-                                            <h3>Tagliatelli integral</h3>
+                                        <div itemscope itemtype="http://schema.org/offers">
+                                            <h3 itemprop="name">Tagliatelli integral</h3>
                                             <p>
                                             </p>
                                         </div>
-                                        <span class="offer-price">R$15</span>
+                                        <span class="offer-price" itemprop="price">R$15</span>
                                     </div>
                                 </div>
                                 <!-- end col -->
                             </div>
                             <div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
-                                    <div class="offer-item">
+                                    <div class="offer-item" itemscope itemtype="http://schema.org/MenuItem">
                                         <img src="images/lasanha_bolonhesa.jpg" alt="" class="img-responsive">
-                                        <div>
-                                            <h3>Bolonhesa</h3>
+                                        <div itemscope itemtype="http://schema.org/offers">
+                                            <h3 itemprop="name">Bolonhesa</h3>
                                             <p>
                                             </p>
                                         </div>
-                                        <span class="offer-price">$25</span>
+                                        <span class="offer-price" itemprop="price">$25</span>
                                     </div>
-                                    <div class="offer-item">
+                                    <div class="offer-item" itemscope itemtype="http://schema.org/MenuItem">
                                         <img src="images/lasanha_frango.jpg" alt="" class="img-responsive">
-                                        <div>
-                                            <h3>Frango com cream cheese</h3>
+                                        <div itemscope itemtype="http://schema.org/offers">
+                                            <h3 itemprop="name">Frango com cream cheese</h3>
                                             <p>
                                             </p>
                                         </div>
-                                        <span class="offer-price">R$25</span>
+                                        <span class="offer-price" itemprop="price">R$25</span>
                                     </div>
                                 </div>
                                 <!-- end col -->
-                              
+
 
                                 <!-- end col -->
                             </div>
                             <div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
-                                    <div class="offer-item">
+                                    <div class="offer-item" itemscope itemtype="http://schema.org/MenuItem">
                                         <img src="images/molho_bolonhesa.jpg" alt="" class="img-responsive">
-                                        <div>
-                                            <h3>Molho Bolonhesa - 400 ml</h3>
+                                        <div itemscope itemtype="http://schema.org/offers">
+                                            <h3 itemprop="name">Molho Bolonhesa - 400 ml</h3>
                                             <p>
                                             </p>
                                         </div>
-                                        <span class="offer-price">R$17</span>
+                                        <span class="offer-price" itemprop="price">R$17</span>
                                     </div>
                                 </div>
                                 <!-- end col -->
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
-                                    <div class="offer-item">
+                                    <div class="offer-item" itemscope itemtype="http://schema.org/MenuItem">
                                         <img src="images/molho_pomodoro.jpg" alt="" class="img-responsive">
-                                        <div>
-                                            <h3>Molho Pomodoro - 400 ml</h3>
+                                        <div itemscope itemtype="http://schema.org/offers">
+                                            <h3 itemprop="name">Molho Pomodoro - 400 ml</h3>
                                             <p>
                                             </p>
                                         </div>
@@ -357,29 +357,29 @@ Além de massas, criamos molhos com ingredientes orgânicos selecionados e fresc
                                 </div>
                                 <!-- end col -->
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
-                                    <div class="offer-item">
+                                    <div class="offer-item" itemscope itemtype="http://schema.org/MenuItem">
                                         <img src="images/molho_trifollati.jpg" alt="" class="img-responsive">
-                                        <div>
-                                            <h3>Molho Trifollati - 400 ml</h3>
+                                        <div itemscope itemtype="http://schema.org/offers">
+                                            <h3 itemprop="name">Molho Trifollati - 400 ml</h3>
                                             <p>
                                               Cogumelos
                                             </p>
                                         </div>
-                                        <span class="offer-price">R$16</span>
+                                        <span class="offer-price" itemprop="price">R$16</span>
                                     </div>
                                 </div>
                                 <!-- end col -->
                             </div>
                             <div>
                                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 ">
-                                    <div class="offer-item">
+                                    <div class="offer-item" itemscope itemtype="http://schema.org/MenuItem">
                                         <img src="images/azeite.jpg" alt="" class="img-responsive">
-                                        <div>
-                                            <h3>Azeite defumado com ervas - 50 ml</h3>
+                                        <div itemscope itemtype="http://schema.org/offers">
+                                            <h3 itemprop="name">Azeite defumado com ervas - 50 ml</h3>
                                             <p>
                                             </p>
                                         </div>
-                                        <span class="offer-price">R$10</span>
+                                        <span class="offer-price" itemprop="price">R$10</span>
                                     </div>
                                 </div>
 
@@ -1115,6 +1115,15 @@ Além de massas, criamos molhos com ingredientes orgânicos selecionados e fresc
     </div>
     <a href="#" class="scrollup" style="display: none;">Scroll</a>
 
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172742593-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-172742593-1');
+    </script>
 
     <!-- ALL JS FILES -->
     <script src="js/all.js"></script>
