--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link id="changeable-colors" rel="stylesheet" href="css/colors/moderate-green.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Galada">
 
-
+    <meta name="google-site-verification" content="google-site-verification=odsRl1zIS-r-krj2Ycfdc5f4kU6xr8CWYaBzPT51UW0">
     <!-- Modernizer -->
     <script src="js/modernizer.js"></script>
 
