SEO: keywords and more

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <!-- Site Metas -->
     <title>Fitnelli's - Massas Funcionais </title>
-    <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="keywords" content="massas delivery bh, massas funcionais, raviolli, comida funcional, cozinha funcional, chef, comida italiana, massa integral, tagliatelli, chia, cenoura, beterraba, lasanha, lasagna, pomodoro, bolognesa, bolonhesa, comida prática, marmita, marmitex, fit, fitness, saúde, saudável, macarrão, azeite, comida italiana, farinha de trigo integral, alimentação, alimentação saudável, comida leve, comida prática, comida congelada, marmita congelada, delivery bh, almoço bh, almoço, comida saudável bh">
+    <meta name="description" content="Cozinha funcional. Massas funcionais, comida saudável e com sabor. Tagliatellis, raviollis, azeites, compotas, lasanhas e molhos.">
     <meta name="author" content="">
 
     <!-- Site Icons -->
@@ -29,8 +29,8 @@
     <!-- color -->
     <link id="changeable-colors" rel="stylesheet" href="css/colors/moderate-green.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Galada">
-
-    <meta name="google-site-verification" content="odsRl1zIS-r-krj2Ycfdc5f4kU6xr8CWYaBzPT51UW0">
+    <meta name="google-site-verification" content="UQy4WMfNHRYi-tSFLM6q_aE6N3JgFzJssyNILaHv0rw" />
+    <!-- <meta name="google-site-verification" content="odsRl1zIS-r-krj2Ycfdc5f4kU6xr8CWYaBzPT51UW0"> -->
     <!-- Modernizer -->
     <script src="js/modernizer.js"></script>
 
