SEO: keywords and more

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <!-- Site Metas -->
     <title>Fitnelli's - Massas Funcionais </title>
-    <meta name="keywords" content="massas delivery bh, massas funcionais, raviolli, comida funcional, cozinha funcional, chef, comida italiana, massa integral, tagliatelli, chia, cenoura, beterraba, lasanha, lasagna, pomodoro, bolognesa, bolonhesa, comida prática, marmita, marmitex, fit, fitness, saúde, saudável, macarrão, azeite, comida italiana, farinha de trigo integral, alimentação, alimentação saudável, comida leve, comida prática, comida congelada, marmita congelada, delivery bh, almoço bh, almoço, comida saudável bh">
+    <meta name="keywords" content="massas delivery bh, massas funcionais, raviolli, comida funcional, cozinha funcional, chef, comida italiana, massa integral, tagliatelli, chia, cenoura, beterraba, lasanha, lasagna, pomodoro, bolognesa, bolonhesa, comida prática, marmita, marmitex, fit, fitness, saúde, saudável, macarrão, azeite, comida italiana, farinha de trigo integral, alimentação, alimentação saudável, comida leve, comida prática, comida congelada, marmita congelada, delivery bh, almoço bh, almoço, comida saudável bh, lanche, lanche saudável, comida caseira, comida pampulha, restaurante, restaurante pampulha, restaurante vegano, comida vegana">
     <meta name="description" content="Cozinha funcional. Massas funcionais, comida saudável e com sabor. Tagliatellis, raviollis, azeites, compotas, lasanhas e molhos.">
-    <meta name="author" content="">
+    <meta name="author" content="jersobh@gmail.com">
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
