--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="viewport" content="width=device-width, maximum-scale=1, initial-scale=1, user-scalable=0">
 
     <!-- Site Metas -->
-    <title>Fitnelli's - Massas Funcionais </title>
-    <meta name="keywords" content="massas delivery bh, massas funcionais, raviolli, comida funcional, cozinha funcional, chef, comida italiana, massa integral, tagliatelli, chia, cenoura, beterraba, lasanha, lasagna, pomodoro, bolognesa, bolonhesa, comida prática, marmita, marmitex, fit, fitness, saúde, saudável, macarrão, azeite, comida italiana, farinha de trigo integral, alimentação, alimentação saudável, comida leve, comida prática, comida congelada, marmita congelada, delivery bh, almoço bh, almoço, comida saudável bh, lanche, lanche saudável, comida caseira, comida pampulha, restaurante, restaurante pampulha, restaurante vegano, comida vegana">
+    <title>Fitnelli's - Cozinha Funcional. Massas funcionais, Lasanhas, Raviollis, Tagliatellis, molhos e compotas. </title>
+    <meta name="keywords" content="massas delivery bh, massas funcionais, raviolli, comida funcional, cozinha funcional, chef, comida italiana, massa integral, tagliatelli, chia, cenoura, beterraba, lasanha, lasagna, pomodoro, bolognesa, bolonhesa, comida prática, marmita, marmitex, fit, fitness, saúde, saudável, macarrão, azeite, comida italiana, farinha de trigo integral, alimentação, alimentação saudável, comida leve, comida prática, comida congelada, marmita congelada, delivery bh, almoço bh, almoço, comida saudável bh, lanche, lanche saudável, comida caseira, comida pampulha, restaurante, restaurante pampulha, restaurante vegano, comida vegana, molho a bolonhesa, molhos, molho, molho de tomate, molho sugo, molho de cogumelos, compotas, molho branco">
     <meta name="description" content="Cozinha funcional. Massas funcionais, comida saudável e com sabor. Tagliatellis, raviollis, azeites, compotas, lasanhas e molhos.">
     <meta name="author" content="jersobh@gmail.com">
 
