SEO: Social meta

--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
     <meta name="description" content="Cozinha funcional. Massas funcionais, comida saudável e com sabor. Tagliatellis, raviollis, azeites, compotas, lasanhas e molhos.">
     <meta name="author" content="jersobh@gmail.com">
 
+    <meta itemprop="image" content="https://fitnellis.github.io/images/staff-01.jpg">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://fitnellis.github.io">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Fitnelli's - Cozinha Funcional. Massas funcionais, Lasanhas, Raviollis, Tagliatellis, molhos e compotas. ">
+<meta property="og:description" content="Cozinha funcional. Massas funcionais, comida saudável e com sabor. Tagliatellis, raviollis, azeites, compotas, lasanhas e molhos.">
+<meta property="og:image" content="https://fitnellis.github.io/images/staff-01.jpg">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Fitnelli's - Cozinha Funcional. Massas funcionais, Lasanhas, Raviollis, Tagliatellis, molhos e compotas. ">
+<meta name="twitter:description" content="Cozinha funcional. Massas funcionais, comida saudável e com sabor. Tagliatellis, raviollis, azeites, compotas, lasanhas e molhos.">
+<meta name="twitter:image" content="https://fitnellis.github.io/images/staff-01.jpg">
+
     <!-- Site Icons -->
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
