--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
 
@@ -516,7 +516,7 @@ Além de massas, criamos molhos com ingredientes orgânicos selecionados e fresc
                 </div>
                 <!-- end row -->
             </div>
-    
+
         </div>
         <!-- end footer-box -->
     </div>
