--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <meta itemprop="image" content="https://fitnellis.github.io/images/staff-01.jpg">
 
 <!-- Facebook Meta Tags -->
+<meta property="og:site_name" content="Fitnelli's - Cozinha Funcional. Massas funcionais, molhos e compotas.">
 <meta property="og:url" content="https://fitnellis.github.io">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Fitnelli's - Cozinha Funcional. Massas funcionais, Lasanhas, Raviollis, Tagliatellis, molhos e compotas. ">
