--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       "image": "https://fitnellis.github.io/images/staff-01.jpg",
       "telephone": "31 9922-1691",
       "priceRange": "$10 - $40",
+      "priceRange": "$",
       "description": "Cozinha funcional. Massas funcionais, lasanhas, molhos e compotas.",
       "servesCuisine": [
           "Italian",
@@ -731,30 +732,7 @@
   <script src="js/bootstrap.min.js"></script>
   <!-- ALL PLUGINS -->
   <script src="js/custom.js"></script>
-  <script src="https://rawcdn.githack.com/jsanahuja/InstagramFeed/514c379c599a1a1fed79d6b21f063c26bdbfb016/dist/InstagramFeed.min.js"></script>
-  <script>
-  function sendConversion() {
-    ga('send', 'event', 'whatsapp','click', 'Novo contato');
-    // ga('send', 'pageview');
-    console.log('conversion')
-  }
-  (function(){
-    new InstagramFeed({
-      'username': 'fitnellisgourmet',
-      'container': document.getElementById("instagram-feed"),
-      'display_profile': false,
-      'display_biography': false,
-      'display_gallery': true,
-      'callback': null,
-      'styling': true,
-      'items': 36,
-      'items_per_row': 3,
-      'margin': 1,
-      'lazy_load': true,
-      'on_error': console.error
-    });
-  })();
-</script>
+
 <!-- end footer-main -->
 <div id="whatswidget-pre-wrapper" class="">
   <div id="whatswidget-widget-wrapper" class="whatswidget-widget-wrapper" style="all:revert;">
@@ -765,6 +743,31 @@
         .whatswidget-cta-mobile{display:none !important}}.whatswidget-button-wrapper{position:fixed !important;bottom:65px !important;right:15px !important}.whatswidget-button{position:relative !important;right:0px !important;background-color:#31d831 !important;border-radius:100% !important;width:60px !important;height:60px !important;box-shadow:2px 1px #0d630d63 !important;transition:1s !important}.whatswidget-icon{width:42px !important;height:42px !important;position:absolute !important; bottom:10px !important; left:10px !important;}.whatswidget-button:hover{filter:brightness(115%) !important;transform:rotate(15deg) scale(1.15) !important;cursor:pointer !important}@keyframes nudge{20%,100%{transform:translate(0,0)}0%{transform:translate(0,5px);transform:rotate(2deg)}10%{transform:translate(0,-5px);transform:rotate(-2deg)}}.whatswidget-link{position:absolute !important;bottom:90px !important;right:5px !important;opacity:0.5 !important}</style>
       </div>
       <a href="#" class="scrollup" style="display: none;">Scroll</a>
+      <script src="https://rawcdn.githack.com/jsanahuja/InstagramFeed/514c379c599a1a1fed79d6b21f063c26bdbfb016/dist/InstagramFeed.min.js"></script>
+      <script>
+      function sendConversion() {
+        ga('send', 'event', 'whatsapp','click', 'Novo contato');
+        // ga('send', 'pageview');
+        console.log('conversion')
+      }
+      (function(){
+        new InstagramFeed({
+          'username': 'fitnellisgourmet',
+          'container': document.getElementById("instagram-feed"),
+          'display_profile': false,
+          'display_biography': false,
+          'display_gallery': true,
+          'callback': null,
+          'styling': true,
+          'items': 36,
+          'items_per_row': 3,
+          'margin': 1,
+          'lazy_load': true,
+          'on_error': console.error
+        });
+      })();
+    </script>
+    <iframe width="540" height="305" src="https://36718985.sibforms.com/serve/MUIEAIa_Hlb5FTkSX0lj9hixwQlXIh75AzUWg6YNu1RTdTDhn0ZBVwpM93Yt4MO20A8GedrlxSeXjHCGeGY1UCPJAqaqnmxt-7DF7FyJ6xMxYIvUF1eDkaiqMDJYX5LXtxuxccJ-BV85cCJSthhb7b2jI8R0MKrOlqSydagxlLqy5EmlAxg9yQwV7rStoJpSIS4fojJeDlkIZKwa" frameborder="0" scrolling="auto" allowfullscreen style="display: block;margin-left: auto;margin-right: auto;max-width: 100%;"></iframe>
     </body>
 
     </html>
