--- a/index.html
+++ b/index.html
@@ -663,6 +663,7 @@
     <div id="footer" class="footer-main">
       <div class="footer-box pad-top-70">
         <div class="container">
+          <script>if(!window.mootrack){ !function(t,n,e,o,a){function d(t){var n=~~(Date.now()/3e5),o=document.createElement(e);o.async=!0,o.src=t+"?ts="+n;var a=document.getElementsByTagName(e)[0];a.parentNode.insertBefore(o,a)}t.MooTrackerObject=a,t[a]=t[a]||function(){return t[a].q?void t[a].q.push(arguments):void(t[a].q=[arguments])},window.attachEvent?window.attachEvent("onload",d.bind(this,o)):window.addEventListener("load",d.bind(this,o),!1)}(window,document,"script","https://cdn.stat-track.com/statics/moosend-tracking.min.js","mootrack"); } mootrack('loadForm', 'fa6d5afe143e4051b204956e8b717ba4');</script>
           <div class="row">
             <div class="footer-in-main">
               <div class="footer-logo">
