--- a/index.html
+++ b/index.html
@@ -326,11 +326,11 @@
         <div class="wow fadeIn" data-wow-duration="1s" data-wow-delay="0.1s">
           <h2 class="block-title"> Cozinha Funcional </h2>
           <h3>A cozinha funcional...</h3>
-          <p>A Fitnelli's tem a especialidade em criar deliciosos pratos funcionais,  agregando mais sabor à sua refeição.
-            Além de massas, criamos molhos com ingredientes orgânicos selecionados e frescos. </p>
-            <p> Cozinha funcional é a cozinha cujos pratos entregam alto valor nutricional, são ricos em vitaminas, antioxidantes e fibras e muito saudáveis. </p>
-            <p> No entanto, comida saudável não é sinônimo de comida sem graça. A Fitnelli's tem a especialidade de criar pratos deliciosos funcionais.</p>
-            <p> Além de massas, criamos molhos com ingredientes orgânicos selecionados. </p>
+          <p> Cozinha funcional é a cozinha cujos pratos entregam alto valor nutricional, são ricos em vitaminas, antioxidantes e fibras e muito saudáveis. </p>
+          <p>A Fitnelli's tem a especialidade em criar deliciosos pratos funcionais, agregando mais sabor à sua refeição.
+            Além de massas, criamos molhos com ingredientes orgânicos selecionados e frescos.
+          </p>
+          <p><a data-mooform-id="fa6d5afe-143e-4051-b204-956e8b717ba4" href="#">Clique aqui</a> e assine nosso cardápio e receba em seu email nossas novidades!</p>
           </div>
         </div>
         <!-- end col -->
