--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
           <p>A Fitnelli's tem a especialidade em criar deliciosos pratos funcionais, agregando mais sabor à sua refeição.
             Além de massas, criamos molhos com ingredientes orgânicos selecionados e frescos.
           </p>
-          <p><button data-mooform-id="fa6d5afe-143e-4051-b204-956e8b717ba4" id="btn-assinar"><b>Clique aqui</b></button> e assine nosso cardápio e receba em seu email nossas novidades!</p>
+          <p><button data-mooform-id="fa6d5afe-143e-4051-b204-956e8b717ba4" id="btn-assinar"><b>Clique aqui</b></button>, assine nosso cardápio e receba em seu email nossas novidades!</p>
           </div>
         </div>
         <!-- end col -->
