--- a/index.html
+++ b/index.html
@@ -698,18 +698,21 @@
     </div>
 
     <script>
-    if(!window.mootrack){ !function(t,n,e,o,a){function d(t){var n=~~(Date.now()/3e5),o=document.createElement(e);o.async=!0,o.src=t+"?ts="+n;var a=document.getElementsByTagName(e)[0];a.parentNode.insertBefore(o,a)}t.MooTrackerObject=a,t[a]=t[a]||function(){return t[a].q?void t[a].q.push(arguments):void(t[a].q=[arguments])},window.attachEvent?window.attachEvent("onload",d.bind(this,o)):window.addEventListener("load",d.bind(this,o),!1)}(window,document,"script","https://cdn.stat-track.com/statics/moosend-tracking.min.js","mootrack"); }
+
+  !function(t,n,e,o,a){function d(t){var n=~~(Date.now()/3e5),o=document.createElement(e);o.async=!0,o.src=t+"?ts="+n;var a=document.getElementsByTagName(e)[0];a.parentNode.insertBefore(o,a)}t.MooTrackerObject=a,t[a]=t[a]||function(){return t[a].q?void t[a].q.push(arguments):void(t[a].q=[arguments])},window.attachEvent?window.attachEvent("onload",d.bind(this,o)):window.addEventListener("load",d.bind(this,o),!1)}(window,document,"script","//cdn.stat-track.com/statics/moosend-tracking.min.js","mootrack");
 
     function loadCTA() {
-      mootrack('loadForm', 'fa6d5afe143e4051b204956e8b717ba4');
-    }
 
       mootrack('loadForm', 'fa6d5afe143e4051b204956e8b717ba4');
+    }
+    mootrack('init', '509e3ab721214674a1d79251e549ac6e');
+    mootrack('loadForm', 'fa6d5afe143e4051b204956e8b717ba4');
 
     var modbtn = document.getElementById('btn-assinar');
     modbtn.addEventListener("click", loadCTA, false);
 
     </script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-172742593-1"></script>
     <script>
