--- a/index.html
+++ b/index.html
@@ -770,7 +770,7 @@
       }
       (function(){
         new InstagramFeed({
-          'username': 'fitnellisgourmet',
+          'username': 'fitnellis.oficial',
           'container': document.getElementById("instagram-feed"),
           'display_profile': false,
           'display_biography': false,
