--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
   <script src="js/modernizer.js"></script>
 <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
 
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/oboe@2.1.5/dist/oboe-browser.min.js"></script>
   <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
   <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -785,7 +786,17 @@
         });
       })();
     </script>
+    <script>
+      oboe('receitas.json')
+       .done(function(things) {
+          console.log(things)
+          // we got it
+       })
+       .fail(function() {
 
+          // we don't got it
+       });
+    </script>
 
     </body>
 
