--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
               function searchRecipe() {
                 let key = document.getElementById('search-input').value;
                 let receitas = document.getElementById('receitas');
-                if (key.length > 3) {
+                if (key.length => 3) {
                   result = filterByValue(recipes, key)
                   receitas.innerHTML = '';
                   if (result.length > 1) {
@@ -731,7 +731,7 @@
 
               }
               </script>
-              <input id="search-input" onkeydown="searchRecipe()" onchange="searchRecipe()" type="text" placeholder="Buscar receita"></input>
+              <input id="search-input" onkeydown="searchRecipe()" onchange="searchRecipe()" onblur="searchRecipe()" type="text" placeholder="Buscar receita"></input>
             <div id="receitas"></div>
           </div>
         </div>
